<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <TextView
        android:id="@+id/firsttext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/slide_2_title"
        android:textColor="@color/white"
        android:textSize="@dimen/slide_title" />
    <TextView
        android:id="@+id/secondtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firsttext"
        android:fontFamily="@font/roboto_light"
        android:text="@string/slide_2_title2"
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/slide_title" />
    <TextView
        android:id="@+id/sec"
        android:layout_width="wrap_content"
        android:text="@string/sample2"
        android:layout_marginStart="8dp"
        android:layout_below="@+id/secondtext"
        android:textSize="@dimen/slide_desc"
        android:layout_height="wrap_content"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@+id/sec"

        android:orientation="vertical">

        <ImageView
            android:layout_width="450dp"
            android:layout_height="450dp"

            android:src="@drawable/offers"/>

    </LinearLayout>

</RelativeLayout>